# learn_trust

./: Cargo.toml  Notes.md
actix_task_service/: Cargo.toml
actix_task_service/src/: main.rs
actix_task_service/src/api/: task.rs
art/src/: lib.rs  main.rs
ch01/: Cargo.toml  README.md
ch02/: Cargo.toml
hello-actix/: Cargo.toml
hello-actix/src/: main.rs
hello-package/: Cargo.toml
hello-package/src/: back_of_house.rs  lib.rs  main.rs
hello-package/src/front_of_house/: hosting.rs  serving.rs
rust-actix-crud/: Cargo.toml
rust-actix-crud/src/: handlers.rs  main.rs
rust-excercise/: Cargo.toml
rust-excercise/src/: basic_types.rs  collections.rs  complex_types.rs  generics_and_traits.rs  main.rs  match_pattern.rs  ownership_and_borrowing.rs  reference_and_borrow.rs  return_result.rs  type_convert.rs
rust-excercise/src/about_method/: methods.rs
rust-excercise/src/circular_or_self_ref/: mod.rs  weak_ref.rs
rust-excercise/src/collections/: about_hashmap.rs  about_vector.rs
rust-excercise/src/complex_types/: about_string.rs  array_demo.rs  enum_demo.rs  more_string.rs  struct_demo.rs  too_more_string.rs  tuples.rs
rust-excercise/src/deepdive_types/: about_types.rs  enum_and_int.rs  mod.rs  sized_and_dst.rs
rust-excercise/src/flow_control/: basics.rs
rust-excercise/src/formats/: about_formats.rs  mod.rs
rust-excercise/src/functional_programming/: about_closure.rs  mod.rs  (+1 more)
rustflix/: .env  Cargo.toml  Readme.md
rustflix/src/: args.rs  main.rs  models.rs  schema.rs
src/: main.rs
variables/src/: main.rs
world_hello/src/: main.rs
(+30 files in other folders)
