[package]
name = "actix_task_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="^4"
uuid = { version ="1.2.2", features = ["v4"] }
serde ={ version = "1.0.148", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
strum_macros = "0.24.3"
strum = "0.24.1"
derive_more = "0.99.17"